--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -12,7 +12,7 @@
         <filter-class>net.sourceforge.stripes.controller.StripesFilter</filter-class>
         <init-param>
             <param-name>ActionResolver.Packages</param-name>
-            <param-value>net.sourceforge.stripes.examples</param-value>
+            <param-value>com.nordpos.mobile.stripes</param-value>
         </init-param>
     </filter>
 
