--- a/res/StripesResources.properties
+++ b/res/StripesResources.properties
@@ -70,3 +70,7 @@ button.login=Login
 login=Login
 title.welcome=Welcome
 message.welcome=Welcome to
+label.login.password=Password:
+label.login.name=Name:
+message.hello=Hello,
+button.customers=Customers
