Combinate menu and login pages.

--- a/res/StripesResources.properties
+++ b/res/StripesResources.properties
@@ -74,3 +74,4 @@ label.login.password=Password:
 label.login.name=Name:
 message.hello=Hello,
 button.customers=Customers
+header.administration=Administration
