Add user list and view pages.

--- a/res/StripesResources.properties
+++ b/res/StripesResources.properties
@@ -66,12 +66,15 @@ validation.mask.valueDoesNotMatch=<em>{1}</em> is not a valid {0}
 validation.expression.valueFailedExpression=The value supplied ({1}) for field {0} is invalid
 validation.file.postBodyTooBig=Total upload size of {3} KB exceeds the maximum size of {2} KB
 
-button.login=Login
+# Action name
 login=Login
-title.welcome=Welcome
+
 message.welcome=Welcome to
+message.hello=Hello,
+
+label.customers=Customers
+label.administration=Administration
+label.users=Users
+
 label.login.password=Password:
 label.login.name=Name:
-message.hello=Hello,
-button.customers=Customers
-header.administration=Administration
