Add description of administration buttons.

--- a/res/StripesResources.properties
+++ b/res/StripesResources.properties
@@ -78,3 +78,6 @@ label.users=Users
 
 label.login.password=Password:
 label.login.name=Name:
+
+description.customers=Also known as a clients, buyers, or purchasers are the recipients of a goods, services, products, or ideas.
+description.users=POS agent, who uses a computer and network of company.
