--- a/res/StripesResources.properties
+++ b/res/StripesResources.properties
@@ -75,6 +75,8 @@ message.hello=Hello,
 label.customers=Customers
 label.administration=Administration
 label.users=Users
+label.information=About
+label.title=Title
 
 label.login.password=Password:
 label.login.name=Name:
