Add logic of database connection fail.

--- a/res/StripesResources.properties
+++ b/res/StripesResources.properties
@@ -71,6 +71,7 @@ login=Login
 
 message.welcome=Welcome to
 message.hello=Hello,
+message.db.connection.fail=Fail database connection
 
 label.customers=Customers
 label.administration=Administration
@@ -83,3 +84,5 @@ label.login.name=Name:
 
 description.customers=Also known as a clients, buyers, or purchasers are the recipients of a goods, services, products, or ideas.
 description.users=POS agent, who uses a computer and network of company.
+description.check.db.parameters=Check context parameters(<b>db.driver</b>, <b>db.URL</b>, <b>db.user</b> and <b>db.password</b>) of database connection in deployment descriptor(<b>/WEB-INF/web.xml</b>) of your servlet.
+
