Translation info page.

--- a/res/StripesResources.properties
+++ b/res/StripesResources.properties
@@ -79,6 +79,12 @@ label.users=Users
 label.information=About
 label.title=Title
 
+label.info.server=Server
+label.info.language=Language
+label.info.country=Country
+label.db.driver=DB driver
+label.db.url=DB URL
+
 label.login.password=Password:
 label.login.name=Name:
 
