Add contact information into customer page.

--- a/res/StripesResources.properties
+++ b/res/StripesResources.properties
@@ -85,10 +85,27 @@ label.info.country=Country
 label.db.driver=DB driver
 label.db.url=DB URL
 
-label.login.password=Password:
-label.login.name=Name:
+label.login.password=Password
+label.login.name=Name
 
 description.customers=Also known as a clients, buyers, or purchasers are the recipients of a goods, services, products, or ideas.
 description.users=POS agent, who uses a computer and network of company.
 description.check.db.parameters=Check context parameters(<b>db.driver</b>, <b>db.URL</b>, <b>db.user</b> and <b>db.password</b>) of database connection in deployment descriptor(<b>/WEB-INF/web.xml</b>) of your servlet.
 
+label.customer.id=ID
+label.customer.searchkey=Search key
+label.customer.taxid=Tax ID
+label.customer.address=Location/Address
+label.customer.address2=Address line 2
+label.customer.postal=Postal code
+label.customer.city=City
+label.customer.region=Region
+label.customer.country=Country
+label.customer.firstname=First name
+label.customer.lastname=Last name
+label.customer.email=E-mail
+label.customer.phone=Phone
+label.customer.phone2=Alt. phone
+label.customer.fax=Fax
+label.customer.contact=Contact
+label.customer.general=General
