Add getJavaVersion() and getOperationSystem() methods for info.jsp.

--- a/res/StripesResources.properties
+++ b/res/StripesResources.properties
@@ -82,6 +82,8 @@ label.title=Title
 label.info.server=Server
 label.info.language=Language
 label.info.country=Country
+label.info.java.version=Java version
+label.info.os=Operation system
 label.db.driver=DB driver
 label.db.url=DB URL
 
