Add Java Derby DB client and servlet context parameters.

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -27,6 +27,25 @@
         <param-value>root</param-value>
     </context-param>
 
+<!--
+    <context-param>
+        <param-name>db.driver</param-name>
+        <param-value>org.apache.derby.jdbc.ClientDriver</param-value>
+    </context-param>
+    <context-param>
+        <param-name>db.URL</param-name>
+        <param-value>jdbc:derby://localhost:1527/nordpos-db</param-value>
+    </context-param>
+        <context-param>
+        <param-name>db.user</param-name>
+        <param-value>nord</param-value>
+    </context-param>
+        <context-param>
+        <param-name>db.password</param-name>
+        <param-value>nord</param-value>
+    </context-param>
+-->
+
     <filter>
         <filter-name>StripesFilter</filter-name>
         <filter-class>net.sourceforge.stripes.controller.StripesFilter</filter-class>
