Add many changes: show product image, get information about product for ticket, redesign welcome and administration panel.

--- a/res/StripesResources.properties
+++ b/res/StripesResources.properties
@@ -73,11 +73,14 @@ message.welcome=Welcome to
 message.hello=Hello,
 message.db.connection.fail=Fail database connection
 
+label.products=Products
+label.productcategories=Categories
 label.customers=Customers
-label.administration=Administration
 label.users=Users
-label.information=About
+label.administration=Administration
+label.information=Info
 label.title=Title
+label.buy=Buy
 
 label.info.server=Server
 label.info.language=Language
@@ -111,3 +114,18 @@ label.customer.phone2=Alt. phone
 label.customer.fax=Fax
 label.customer.contact=Contact
 label.customer.general=General
+
+label.product.name=Name
+label.product.reference=Ref.
+label.product.code=Barcode
+label.product.pricesell=Price
+label.product.priceselltax=Price + tax
+label.product.category.name=Category
+label.product.tax.name=Tax name
+label.product.tax.rate=Tax rate
+label.product.tax.amount=Tax amount
+
+
+label.nav.home=Home
+label.nav.about=About
+label.nav.terms=Terms
