Set sell label.

--- a/res/StripesResources.properties
+++ b/res/StripesResources.properties
@@ -81,6 +81,7 @@ label.administration=Administration
 label.information=Info
 label.title=Title
 label.buy=Buy
+label.sell=Sell
 
 label.info.server=Server
 label.info.language=Language
